--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Aula GIT</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>exercicio com GIT</h1>
+        <p>Meu segundo commit</p>
+        <table>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+            </tr>
+        </table>
     </body>
 </html>
